# amocrm_analitic

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
deploy/: amo.linksider-ai.ru.nginx  amocrm-service.service  rewrite_env_for_systemd.py
docs/: ARCHITECTURE.md  AUTO_SYNC_HUB.md  CONVERSATION_INTELLIGENCE_PLAN.md  HUB_AND_DASHBOARDS_ARCHITECTURE.md  SCALING_ARCHITECTURE.md  SITE_FORM_INTEGRATION.md  llm_call_evaluation_instruction.md  speech_analytics_full_documentation.md
examples/: site-form.html
scripts/: ai_formula_probe.py  ai_formula_probe_cross_period.py  ai_formula_probe_dates.py  ai_formula_probe_group_by.py  ai_formula_probe_phrasing.py  ai_formula_probe_select.py  ai_formula_probe_titles.py  ai_formula_probe_users.py  diagnose_call_snapshots.py  diagnose_conversations.py  enable_external_analysis.ps1  eval_batch.py  perf_probe.py  recalc_one.py  run_external_analysis_once.ps1  smoke_routes.py  start_auto_sync_hub.ps1  start_donpotolok_external_server.ps1  status_names.py
scripts/migrations/: 20260710_001_create_call_checklist_step.sql  20260710_002_harden_checklist_hints.sql
src/amocrm_service/: activity.py  ai_formula.py  analytics.py  (+27 more)
tests/: test_activity.py  test_ai_formula.py  test_amo_filter_url.py  test_auto_sync.py  test_conversations.py  test_formula_engine.py  test_formula_engine_date_presets.py  test_formula_engine_diagnose.py  test_formula_engine_empty.py  test_kpi.py  test_quality.py  test_render_smoke.py  test_site_forms.py  test_sync_incremental.py  test_sync_queue.py  test_tenancy.py  test_tenant_admin.py  test_widgets_safety.py
(+3 files in other folders)
