[project]
name = "amocrm-service"
version = "0.1.0"
description = "amoCRM analytics and control service MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "tzdata",
]

[project.scripts]
amocrm-service = "amocrm_service.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

