[project]
name = "amocrm-service"
version = "0.1.0"
description = "amoCRM analytics and control service MVP"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "tzdata",
]

[project.scripts]
amocrm-service = "amocrm_service.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

